@@ -67,7 +67,6 @@ Config::Config ()
 	, _cinema_sound_processor (CinemaSoundProcessor::from_id (N_("dolby_cp750")))
 	, _allow_any_dcp_frame_rate (false)
 	, _default_still_length (10)
-	, _default_scale (VideoContentScale (Ratio::from_id ("185")))
 	, _default_container (Ratio::from_id ("185"))
 	, _default_dcp_content_type (DCPContentType::from_isdcf_name ("FTR"))
 	, _default_j2k_bandwidth (100000000)
@@ -147,11 +146,6 @@ Config::read ()
 	}
 
 	_language = f.optional_string_child ("Language");
-
-	c = f.optional_string_child ("DefaultScale");
-	if (c) {
-		_default_scale = VideoContentScale::from_id (c.get ());
-	}
 
 	c = f.optional_string_child ("DefaultContainer");
 	if (c) {
@@ -331,7 +325,6 @@ Config::write () const
 	if (_language) {
 		root->add_child("Language")->add_child_text (_language.get());
 	}
-	root->add_child("DefaultScale")->add_child_text (_default_scale.id ());
 	if (_default_container) {
 		root->add_child("DefaultContainer")->add_child_text (_default_container->id ());
 	}
