@@ -32,6 +32,7 @@ public:
 	float video_frame_rate () const;
 	dcp::Size video_size () const;
 	ContentTime video_length () const;
+	boost::optional<float> sample_aspect_ratio () const;
 
 	std::vector<boost::shared_ptr<FFmpegSubtitleStream> > subtitle_streams () const {
 		return _subtitle_streams;
