@@ -35,4 +35,7 @@ public:
 	virtual float video_frame_rate () const = 0;
 	virtual dcp::Size video_size () const = 0;
 	virtual ContentTime video_length () const = 0;
+	virtual boost::optional<float> sample_aspect_ratio () const {
+		return boost::optional<float> ();
+	}
 };
