@@ -58,6 +58,7 @@ def build(bld):
                  threed_test.cc
                  upmixer_a_test.cc
                  util_test.cc
+                 video_decoder_fill_test.cc
                  xml_subtitle_test.cc
                  """
 
